--- a/packages/analytics-js-plugins/package.json
+++ b/packages/analytics-js-plugins/package.json
@@ -73,12 +73,12 @@
     "package": "npm pack",
     "release": "npm publish"
   },
-  "dependencies": {
-    "crypto-es": "2.1.0",
-    "@rudderstack/analytics-js-common": "*"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@bugsnag/js": "6.5.2"
+    "@bugsnag/js": "6.5.2",
+    "crypto-es": "2.1.0",
+    "@rudderstack/analytics-js-common": "*",
+    "ramda": "0.30.0"
   },
   "overrides": {},
   "browserslist": {
