--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -68,7 +68,13 @@
   "engines": {
     "node": ">=v12"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@types/ms": "0.7.34",
+    "@types/lodash.clonedeep": "4.5.9",
+    "@types/lodash.isstring": "4.0.9",
+    "@types/node": "20.12.12",
+    "jest-date-mock": "1.0.10",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
     "assert": "2.1.0",
     "axios": "1.6.8",
@@ -77,14 +83,8 @@
     "join-component": "1.1.0",
     "lodash.clonedeep": "4.5.0",
     "lodash.isstring": "4.0.1",
-    "ms": "2.1.3"
-  },
-  "devDependencies": {
-    "@types/ms": "0.7.34",
-    "@types/lodash.clonedeep": "4.5.9",
-    "@types/lodash.isstring": "4.0.9",
-    "@types/node": "20.12.12",
-    "jest-date-mock": "1.0.10"
+    "ms": "2.1.3",
+    "@lukeed/uuid": "2.0.1"
   },
   "overrides": {},
   "browserslist": {
