--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -84,8 +84,7 @@
     "build:integration:all:bundle-size": "VISUALIZER=true npm run build:integration:all",
     "build:integration:all:bundle-size:modern": "VISUALIZER=true npm run build:integration:all:modern"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "@rudderstack/analytics-js-common": "*",
     "@ndhoule/each": "2.0.1",
     "lodash.get": "4.4.2",
@@ -105,6 +104,7 @@
     "get-value": "3.0.1",
     "ramda": "0.30.0"
   },
+  "devDependencies": {},
   "overrides": {},
   "browserslist": {
     "production": [
