--- a/packages/analytics-js-plugins/package.json
+++ b/packages/analytics-js-plugins/package.json
@@ -73,12 +73,13 @@
     "package": "npm pack",
     "release": "npm publish"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "@bugsnag/js": "6.5.2",
+  "dependencies": {
     "crypto-es": "2.1.0",
     "@rudderstack/analytics-js-common": "*",
     "ramda": "0.30.0"
+  },
+  "devDependencies": {
+    "@bugsnag/js": "6.5.2"
   },
   "overrides": {},
   "browserslist": {
