--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -76,15 +76,10 @@
     "url": "https://github.com/rudderlabs/rudder-sdk-js.git",
     "directory": "packages/analytics-v1.1"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "@rudderstack/analytics-js-common": "*",
-    "component-emitter": "2.0.0",
-    "@segment/localstorage-retry": "1.3.0",
-    "@lukeed/uuid": "2.0.1",
-    "get-value": "3.0.1",
-    "ramda": "0.30.0"
+  "dependencies": {
+    "@rudderstack/analytics-js-common": "*"
   },
+  "devDependencies": {},
   "overrides": {},
   "browserslist": {
     "production": [
